# crf-guesser

./: crf-guesser.cabal
Data/: .Guesser.hs.swp  Guesser.hs
examples/: Guess.hs  Train.hs  nkjp-tagset.cfg
